src/libobjc/runtime.nim


proc protocolGetName*(proto: ptr Protocol): cstring {.cdecl,
    importc: "protocol_getName", dynlib: libobjc.}

proc protocolGetMethodDescription*(proto: ptr Protocol; aSel: Sel;
                                  isRequiredMethod: Bool; isInstanceMethod: Bool): ObjcMethodDescription {.
    cdecl, importc: "protocol_getMethodDescription", dynlib: libobjc.}

proc protocolCopyMethodDescriptionList*(proto: ptr Protocol; isRequiredMethod: Bool;
                                       isInstanceMethod: Bool; outCount: ptr cuint): ptr ObjcMethodDescription {.
    cdecl, importc: "protocol_copyMethodDescriptionList", dynlib: libobjc.}

proc protocolGetProperty*(proto: ptr Protocol; name: cstring;
                         isRequiredProperty: Bool; isInstanceProperty: Bool): ObjcPropertyT {.
    cdecl, importc: "protocol_getProperty", dynlib: libobjc.}

proc protocolCopyPropertyList*(proto: ptr Protocol; outCount: ptr cuint): ptr ObjcPropertyT {.
    cdecl, importc: "protocol_copyPropertyList", dynlib: libobjc.}

proc protocolCopyPropertyList2*(proto: ptr Protocol; outCount: ptr cuint;
                               isRequiredProperty: Bool; isInstanceProperty: Bool): ptr ObjcPropertyT {.
    cdecl, importc: "protocol_copyPropertyList2", dynlib: libobjc.}

proc protocolCopyProtocolList*(proto: ptr Protocol; outCount: ptr cuint): ptr ptr Protocol {.
    cdecl, importc: "protocol_copyProtocolList", dynlib: libobjc.}

proc objcAllocateProtocol*(name: cstring): ptr Protocol {.cdecl,
    importc: "objc_allocateProtocol", dynlib: libobjc.}

proc objcRegisterProtocol*(proto: ptr Protocol) {.cdecl,
    importc: "objc_registerProtocol", dynlib: libobjc.}

proc protocolAddMethodDescription*(proto: ptr Protocol; name: Sel; types: cstring;
                                  isRequiredMethod: Bool; isInstanceMethod: Bool) {.
    cdecl, importc: "protocol_addMethodDescription", dynlib: libobjc.}

proc protocolAddProtocol*(proto: ptr Protocol; addition: ptr Protocol) {.cdecl,
    importc: "protocol_addProtocol", dynlib: libobjc.}

proc protocolAddProperty*(proto: ptr Protocol; name: cstring;
                         attributes: ptr ObjcPropertyAttributeT;
                         attributeCount: cuint; isRequiredProperty: Bool;
                         isInstanceProperty: Bool) {.cdecl,
    importc: "protocol_addProperty", dynlib: libobjc.}

proc objcCopyImageNames*(outCount: ptr cuint): cstringArray {.cdecl,
    importc: "objc_copyImageNames", dynlib: libobjc.}

proc classGetImageName*(cls: Class): cstring {.cdecl, importc: "class_getImageName",
    dynlib: libobjc.}

proc objcCopyClassNamesForImage*(image: cstring; outCount: ptr cuint): cstringArray {.
    cdecl, importc: "objc_copyClassNamesForImage", dynlib: libobjc.}

proc selGetName*(sel: Sel): cstring {.cdecl, importc: "sel_getName", dynlib: libobjc.}

proc selRegisterName*(str: cstring): Sel {.cdecl, importc: "sel_registerName",
                                       dynlib: libobjc.}

proc selIsEqual*(lhs: Sel; rhs: Sel): Bool {.cdecl, importc: "sel_isEqual",
                                       dynlib: libobjc.}

proc objcEnumerationMutation*(obj: Id) {.cdecl, importc: "objc_enumerationMutation",
                                      dynlib: libobjc.}

proc objcSetEnumerationMutationHandler*(handler: proc (a1: Id) {.cdecl.}) {.cdecl,
    importc: "objc_setEnumerationMutationHandler", dynlib: libobjc.}

proc objcSetForwardHandler*(fwd: pointer; fwdStret: pointer) {.cdecl,
    importc: "objc_setForwardHandler", dynlib: libobjc.}

proc impImplementationWithBlock*(`block`: Id): Imp {.cdecl,
    importc: "imp_implementationWithBlock", dynlib: libobjc.}

proc impGetBlock*(anImp: Imp): Id {.cdecl, importc: "imp_getBlock", dynlib: libobjc.}

proc impRemoveBlock*(anImp: Imp): Bool {.cdecl, importc: "imp_removeBlock",
                                     dynlib: libobjc.}

proc objcLoadWeak*(location: ptr Id): Id {.cdecl, importc: "objc_loadWeak",
                                      dynlib: libobjc.}

proc objcStoreWeak*(location: ptr Id; obj: Id): Id {.cdecl, importc: "objc_storeWeak",
    dynlib: libobjc.}

proc objcSetAssociatedObject*(`object`: Id; key: pointer; value: Id;
                             policy: ObjcAssociationPolicy) {.cdecl,
    importc: "objc_setAssociatedObject", dynlib: libobjc.}

proc objcGetAssociatedObject*(`object`: Id; key: pointer): Id {.cdecl,
    importc: "objc_getAssociatedObject", dynlib: libobjc.}

proc objcRemoveAssociatedObjects*(`object`: Id) {.cdecl,
    importc: "objc_removeAssociatedObjects", dynlib: libobjc.}

proc objcSetHookGetImageName*(newValue: ObjcHookGetImageName;
                             outOldValue: ptr ObjcHookGetImageName) {.cdecl,
    importc: "objc_setHook_getImageName", dynlib: libobjc.}

proc objcSetHookGetClass*(newValue: ObjcHookGetClass;
                         outOldValue: ptr ObjcHookGetClass) {.cdecl,
    importc: "objc_setHook_getClass", dynlib: libobjc.}

proc objcAddLoadImageFunc*(`func`: ObjcFuncLoadImage) {.cdecl,
    importc: "objc_addLoadImageFunc", dynlib: libobjc.}

proc objcSetHookLazyClassNamer*(newValue: ObjcHookLazyClassNamer;
                               oldOutValue: ptr ObjcHookLazyClassNamer) {.cdecl,
    importc: "objc_setHook_lazyClassNamer", dynlib: libobjc.}

proc objcRealizeClassFromSwift*(cls: Class; previously: pointer): Class {.cdecl,
    importc: "_objc_realizeClassFromSwift", dynlib: libobjc.}


proc classLookupMethod*(cls: Class; sel: Sel): Imp {.cdecl,
    importc: "class_lookupMethod", dynlib: libobjc.}
proc classRespondsToMethod*(cls: Class; sel: Sel): Bool {.cdecl,
    importc: "class_respondsToMethod", dynlib: libobjc.}
proc objcFlushCaches*(cls: Class) {.cdecl, importc: "_objc_flush_caches",
                                 dynlib: libobjc.}
proc objectCopyFromZone*(anObject: Id; nBytes: csize_t; z: pointer): Id {.cdecl,
    importc: "object_copyFromZone", dynlib: libobjc.}
proc classCreateInstanceFromZone*(a1: Class; idxIvars: csize_t; z: pointer): Id {.cdecl,
    importc: "class_createInstanceFromZone", dynlib: libobjc.}
